--- a/main.css
+++ b/main.css
@@ -34,5 +34,15 @@ h2 a {
   text-decoration: none;
 }
 
+h3 {
+    font-size:1em; 
+    font-weight: 300;
+    text-align: left;
+    display: block;
+    line-height:1em;
+    padding-bottom: 2em;
+    color: #FFF842;
+}
+
 .blue { color: #185875; }
 .yellow { color: #FFF842; }
