--- a/main.css
+++ b/main.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
 
+body, html {width: 100%; height: 100%; margin: 0; padding: 0}
+
 body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
@@ -44,5 +46,8 @@ h3 {
     color: #FFF842;
 }
 
+/*.second-row {position: relative; top: 100px; left: 0; right: 0; bottom: 0; background-color: red }
+.second-row iframe {position: relative; display: block; width: 100%; height: 1000%; border: none;}
+*/
 .blue { color: #185875; }
 .yellow { color: #FFF842; }
